# vectrix

./: Cargo.toml  README.md  onedoc.toml
.github/workflows/: build.yaml
benches/: euler.rs  main.rs
crates/macro/: Cargo.toml
crates/stride/: Cargo.toml  README.md
crates/stride/src/: index.rs  iter.rs  lib.rs  ops.rs
crates/stride/tests/: index.rs  iter.rs  lib.rs  ops.rs
macro/: Cargo.toml
macro/src/: lib.rs
src/: comps.rs  data.rs  fmt.rs  index.rs  iter.rs  lib.rs  new.rs  ops.rs  prelude.rs  traits.rs  vector.rs  view.rs
tests/: comps.rs  fmt.rs  iter.rs  lib.rs  new.rs  ops.rs  valgrind.rs  vector.rs
tools/gen-readme/: Cargo.toml  TEMPLATE.md
tools/gen-readme/src/: main.rs
