[workspace]
members = ["crates/*", "tools/*"]

[workspace.package]
version = "0.2.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/rossmacarthur/vectrix"
license = "MIT OR Apache-2.0"

[package]
name = "vectrix"
description = "A stack-allocated matrix type implemented with const generics"
keywords = ["math", "matrix", "vector", "linear-algebra"]
categories = ["mathematics", "science", "no-std"]
include = ["src/**/*", "LICENSE-*", "README.md"]

version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
stride = { version = "=0.2.0", path = "crates/stride" }
vectrix-macro = { version = "=0.2.0", path = "crates/macro", optional = true }

[dev-dependencies]
criterion = "0.4.0"
rand = "0.8.5"
rand_isaac = "0.3.0"

[features]
default = ["macro", "std"]
std = []
macro = ["dep:vectrix-macro"]

[[bench]]
name = "euler"
harness = false
