[package]
name = "vectrix-macro"
version = "0.1.2"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2018"
description = "A macro for composing matrices."
repository = "https://github.com/rossmacarthur/vectrix"
license = "MIT OR Apache-2.0"

[lib]
proc_macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
