[package]
name = "vectrix-macro"
version = "0.2.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2021"
description = "A macro for composing matrices."
repository = "https://github.com/rossmacarthur/vectrix"
license = "MIT OR Apache-2.0"

[lib]
proc_macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
