[package]
name = "stride"
version = "0.1.1"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2018"
description = "A strided slice type"
readme = "README.md"
repository = "https://github.com/rossmacarthur/vectrix"
license = "MIT OR Apache-2.0"
keywords = ["stride", "slice", "memory"]
categories = ["data-structures", "no-std"]
