[package]
name = "stride"
version = "0.2.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2021"
description = "A strided slice type"
readme = "README.md"
repository = "https://github.com/rossmacarthur/vectrix"
license = "MIT OR Apache-2.0"
keywords = ["stride", "slice", "memory"]
categories = ["data-structures", "no-std"]
