[package]
name = "stride"
description = "A strided slice type"
keywords = ["stride", "slice", "memory"]
categories = ["data-structures", "no-std"]

version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
